<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="Navigation">

    <!-- TODO: Update blank fragment layout -->

    <Button
        android:id="@+id/todo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/todo"/>

    <Button
        android:id="@+id/habit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/habit"/>

    <Button
        android:id="@+id/pocket_money"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pocket_money"/>

</LinearLayout>